--- a/book.html
+++ b/book.html
@@ -9,6 +9,7 @@
   <body>
     <div class="motive">
       <h2>
+        Radhe Radhe Bandhobi  <br />
         I write this Beautiful Book for You . <br />
         You Help me In Every Situation without judging me.
         <br />
@@ -20,7 +21,7 @@
       <div class="page cover-front" onclick="movePage(this, 1)">
         <h1>Dear Best Friend</h1>
         <div class="hat"><i class="fab fa-pied-piper-hat"></i></div>
-        <h2>untoldcoding</h2>
+        <h2>Sushrita</h2>
       </div>
       <div class="page cover-front" onclick="movePage(this, 2)"></div>
       <div class="page text-page" onclick="movePage(this, 3)">
@@ -140,6 +141,7 @@
         </p>
         <p>......This is Not limited here</p>
         <p>You are My Everything Bro 💖.</p>
+        <p>Created by Manotsh Das</p>
 
         <h2>Can we hang out soon?</h2>
         <br />
