--- a/book.html
+++ b/book.html
@@ -139,8 +139,8 @@
           like you is a rare diamond I dearly value. Love you, buddy. Words just
           can’t describe how much you mean to me.
         </p>
-        <p>......This is Not limited here</p>
-        <p>You are My Everything Bro 💖.</p>
+        <p>...This is Not limited here...</p>
+        <p>You are My Everything Dear 💖.</p>
         <p>Created by Manotsh Das</p>
 
         <h2>Can we hang out soon?</h2>
